@@ -1,3 +1,7 @@
+2011-04-19	Dmitry Dulepov	<dmitry.dulepov@gmail.com>
+
+	* Fixed bug #18081: With default config RealURL accepts pages with .html suffix as long as with /
+
 2011-04-14	Dmitry Dulepov	<dmitry.dulepov@gmail.com>
 
 	* Fixed bug #18077: Wrong table column name (thanks to Juris Treibahs)
